--- a/dev/sass/footer.scss
+++ b/dev/sass/footer.scss
@@ -1,10 +1,6 @@
 *{
     box-sizing: border-box;
     text-decoration: none;
-    a:visited{
-        color: #fff;
-        
-    }
     font-family: 'Noto Sans TC', sans-serif !important;
 }
 
@@ -28,9 +24,13 @@ footer.footer{
     .footer_info{
         width: 50%;
         display: flex;
-        color: #fff;
+        // color: #fff;
+        .f_color1{
+            color: #fff;
+        }
         .sevrves_place-serves_tel{
             margin: auto 3% auto 0;
+            height: 110px;
             .place{
                 height: 50%;
                 display: flex;
@@ -55,6 +55,7 @@ footer.footer{
         }
         .serves_time-serves_email{
             margin: auto 3%;
+            height: 110px;
             .time{
                 height: 50%;
                 display: flex;
@@ -99,6 +100,7 @@ footer.footer{
                         border: 1px solid #fff;
                         text-align: center;
                         line-height: 30px;
+                        cursor: pointer;
                     }
                 }
             }
@@ -118,6 +120,9 @@ footer.footer{
                         padding-right: 10px;
                         border-right: 1px solid #fff;
                     }
+                }
+                a:visited{
+                    color: #fff;
                 }
             }
         }
