--- a/dev/sass/footer.scss
+++ b/dev/sass/footer.scss
@@ -208,12 +208,12 @@ footer.footer{
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            // .sevrves_place-serves_tel{
-            //     height: 110px;
-            // }
-            // .serves_time-serves_email{
-            //     height: 110px;
-            // }
+            .sevrves_place-serves_tel{
+                height: 110px;
+            }
+            .serves_time-serves_email{
+                height: 110px; 
+            }
             .epaper-footer_link{
                 height: auto;
                 width: 100%;
