--- a/dev/css/match_info.css
+++ b/dev/css/match_info.css
@@ -1,11 +1,9 @@
 div.wrap {
-  width: 80%;
+  width: 1200px;
   margin: 0 auto;
 }
 
 div.wrap div.leader {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -13,8 +11,7 @@ div.wrap div.leader div.leader_headtag img {
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 div.wrap div.leader div.leader_info {
@@ -22,8 +19,6 @@ div.wrap div.leader div.leader_info {
 }
 
 div.wrap div.leader div.leader_info div.leader_name-badge {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin: auto 0;
 }
@@ -41,8 +36,6 @@ div.wrap div.leader div.leader_info div.leader_introduction {
 }
 
 div.wrap div.public_pic-activity {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -53,20 +46,14 @@ div.wrap div.public_pic-activity div.public_pic {
 div.wrap div.public_pic-activity div.public_pic img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 div.wrap div.public_pic-activity div.activity {
   width: 50%;
   margin-left: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 div.wrap div.public_pic-activity div.activity h3.activity_title {
@@ -74,12 +61,8 @@ div.wrap div.public_pic-activity div.activity h3.activity_title {
 }
 
 div.wrap div.public_pic-activity div.activity div.activity_report {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   margin: 0 20px;
 }
 
@@ -90,12 +73,8 @@ div.wrap div.public_pic-activity div.activity div.activity_report div.report div
 }
 
 div.wrap div.public_pic-activity div.activity div.info_icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  justify-content: space-evenly;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   padding: 10px 0;
@@ -138,8 +117,6 @@ div.wrap div.public_pic-activity div.activity div.applied_participant h4 {
 }
 
 div.wrap div.public_pic-activity div.activity div.applied_participant div.applied_participant_block {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -151,13 +128,10 @@ div.wrap div.public_pic-activity div.activity div.applied_participant div.applie
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 div.wrap div.public_pic-activity div.activity div.applied_participant div.applied_participant_block div.applied_participant_item div.applied_participant_name-badge {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -184,8 +158,6 @@ div.wrap div.related_pic h3 {
 }
 
 div.wrap div.related_pic div.related_pic_block {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-bottom: 10px;
 }
@@ -197,13 +169,10 @@ div.wrap div.related_pic div.related_pic_block div.related_pic_item {
 
 div.wrap div.related_pic div.related_pic_block div.related_pic_item img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 div.wrap div.introduction-application_block div.introduction-application_bt {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -256,13 +225,8 @@ div.wrap div.introduction-application_block div.introduction-application_info .a
 }
 
 div.wrap div.message .leave_message_block {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 div.wrap div.message .leave_message_block textarea {
