--- a/dev/sass/common.scss
+++ b/dev/sass/common.scss
@@ -126,7 +126,8 @@ html , body {
 
 // ==============button==============
 button.btnA_XLwRA{
-  z-index: 2;
+    position: relative;
+    z-index: 2;
   width: 190px;
   height: 45px;
   border: 1px solid $mt_black;
@@ -221,7 +222,8 @@ button.btnA_XLwRA{
 
 
 button.btnA_XLwLA{
-  z-index: 2;
+    position: relative;
+    z-index: 2;
   width: 190px;
   height: 45px;
   border: 1px solid $mt_black;
@@ -316,7 +318,8 @@ button.btnA_XLwLA{
 }
 
 button.btnA_LwRA{
-  z-index: 2;
+    position: relative;
+    z-index: 2;
   width: 95px;
   height: 45px;
   border: 1px solid $mt_black;
@@ -409,7 +412,8 @@ button.btnA_LwRA{
   }
 }
 button.btnA_LwLA{
-  z-index: 2;
+    position: relative;
+    z-index: 2;
   width: 95px;
   height: 45px;
   border: 1px solid $mt_black;
@@ -504,7 +508,8 @@ button.btnA_LwLA{
 }
 
 button.btnA_L{
-  z-index: 2;
+    position: relative;
+    z-index: 2;
   width: 95px;
   height: 45px;
   border: 1px solid $mt_black;
@@ -553,7 +558,8 @@ button.btnA_L{
 } 
 
 button.btnA_MwRA{
-  z-index: 2;
+    position: relative;
+    z-index: 2;
   width: 45px;
   height: 45px;
   border: 1px solid $mt_black;
@@ -638,7 +644,8 @@ button.btnA_MwRA{
 
 
 button.btnA_MwLA{
-  z-index: 2;
+    position: relative;
+    z-index: 2;
   width: 45px;
   height: 45px;
   border: 1px solid $mt_black;
@@ -723,7 +730,8 @@ button.btnA_MwLA{
 }
 
 button.btnA_S{
-  margin: 3px;
+    position: relative;
+    margin: 3px;
   display: inline-block;
   z-index: 2;
   width: 22px;
@@ -784,7 +792,8 @@ button.btnA_S{
 
 
 button.btnB_XL_blue{
-  z-index: 2;
+    position: relative;
+    z-index: 2;
   width: 190px;
   height: 45px;
   // border: 4px solid $mt_blue2;
@@ -840,7 +849,8 @@ button.btnB_XL_blue{
 
 
 button.btnB_XL_yellow{
-  z-index: 2;
+    position: relative;
+    z-index: 2;
   width: 190px;
   height: 45px;
   // border: 4px solid $mt_blue2;
@@ -894,7 +904,8 @@ button.btnB_XL_yellow{
 
 
 button.btnB_L_blue{
-  z-index: 2;
+    position: relative;
+    z-index: 2;
   width: 95px;
   height: 45px;
   outline: 0px !important;
@@ -948,7 +959,8 @@ button.btnB_L_blue{
 
 
 button.btnB_L_yellow{
-  z-index: 2;
+    position: relative;
+    z-index: 2;
   width: 95px;
   height: 45px;
   outline: 0px !important;
