--- a/dev/sass/headerIndex.scss
+++ b/dev/sass/headerIndex.scss
@@ -15,7 +15,7 @@ header {
     & #headerbox {
         & nav.menu{
             position: relative;
-            margin-top: 100px;
+            margin-top: 7vh;
             display: none;
             opacity: 0;
             width: 800px;
